--- a/KSURLValueTransformer/KSURLValueTransformer.xcodeproj/xcshareddata/xcschemes/KSURLValueTransformer-iOS.xcscheme
+++ b/KSURLValueTransformer/KSURLValueTransformer.xcodeproj/xcshareddata/xcschemes/KSURLValueTransformer-iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4EC952A5A068274F056C4859"
-               BuildableName = "Example.app"
-               BlueprintName = "Example"
-               ReferencedContainer = "container:Example.xcodeproj">
+               BlueprintIdentifier = "C228070F1A5BCEDC00508C8B"
+               BuildableName = "KSURLValueTransformer.framework"
+               BlueprintName = "KSURLValueTransformer-iOS"
+               ReferencedContainer = "container:KSURLValueTransformer.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C22807191A5BCEDC00508C8B"
+               BuildableName = "KSURLValueTransformer-iOSTests.xctest"
+               BlueprintName = "KSURLValueTransformer-iOSTests"
+               ReferencedContainer = "container:KSURLValueTransformer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,20 +46,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "36C8112810C8AE3531F50A4D"
-               BuildableName = "UnitTests.xctest"
-               BlueprintName = "UnitTests"
-               ReferencedContainer = "container:Example.xcodeproj">
+               BlueprintIdentifier = "C22807191A5BCEDC00508C8B"
+               BuildableName = "KSURLValueTransformer-iOSTests.xctest"
+               BlueprintName = "KSURLValueTransformer-iOSTests"
+               ReferencedContainer = "container:KSURLValueTransformer.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4EC952A5A068274F056C4859"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:Example.xcodeproj">
+            BlueprintIdentifier = "C228070F1A5BCEDC00508C8B"
+            BuildableName = "KSURLValueTransformer.framework"
+            BlueprintName = "KSURLValueTransformer-iOS"
+            ReferencedContainer = "container:KSURLValueTransformer.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -58,15 +72,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4EC952A5A068274F056C4859"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:Example.xcodeproj">
+            BlueprintIdentifier = "C228070F1A5BCEDC00508C8B"
+            BuildableName = "KSURLValueTransformer.framework"
+            BlueprintName = "KSURLValueTransformer-iOS"
+            ReferencedContainer = "container:KSURLValueTransformer.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -76,15 +90,15 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4EC952A5A068274F056C4859"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:Example.xcodeproj">
+            BlueprintIdentifier = "C228070F1A5BCEDC00508C8B"
+            BuildableName = "KSURLValueTransformer.framework"
+            BlueprintName = "KSURLValueTransformer-iOS"
+            ReferencedContainer = "container:KSURLValueTransformer.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
